# ev-client-ocpp-pazzk

./: CMakeLists.txt  build.cmake  build.mk
include/ocpp/: ocpp.h  overrides.h  stringify.h  type.h
include/ocpp/core/: messages.h
src/: ocpp.c  stringify.c
src/core/: configuration.c
tests/runners/: core.mk
tests/src/: configuration_test.cpp  core_test.cpp
